# NEdit

./: .gitignore  CMakeLists.txt  README.md
Application/: CMakeLists.txt
NEdit/: CMakeLists.txt
NEdit/NEditLib/include/: Core.h  Defines.h  LibTest.h
NEdit/NEditLib/include/Core/: Editor.h  Window.h
NEdit/NEditLib/include/Editor/: BaseNode.h  Editor.h  Link.h  NodeFactory.h  Pin.h
NEdit/NEditLib/include/Nodes/: DemoNode.h
NEdit/NEditLib/include/Utility/: Defines.h  Types.h  Utility.h
NEdit/NEditLib/src/: Temp.cpp
NEdit/NEditLib/src/Core/: Editor.cpp  Window.cpp
NEdit/NEditLib/src/Editor/: BaseNode.cpp  Editor.cpp
NEdit/NEditLibTests/src/: Test.cpp  Test.h
